fix: lower minimum width of `.content` in `ContentWithBento.css` to fix issue where text content overflows screen width on small screens

--- a/src/styles/shared/ContentWithBento.css
+++ b/src/styles/shared/ContentWithBento.css
@@ -5,7 +5,7 @@
 }
 
 .content {
-	min-width: max(20vw, 20rem);
+	min-width: max(20vw, 15rem);
 }
 
 .content *:not(:last-child) {
